# qoqo-for-braket

./: .buildinfo  .gitignore  404.html  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  Introduction.html  README.md  deny.toml  genindex.html  index.html  modules.html  objects.inv  print.html  py-modindex.html  pyproject.toml  search.html  searcher-c2a407aa.js  searchindex-c0f6c409.js  searchindex.js  searchindex.json  toc-ade98812.js  toc.html  toc.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: ci-test-rust-pyo3.yml  hqs-build-deploy-all-docs.yml  hqs-build-deploy-pure-python.yml  hqs-build-deploy-rust-pyo3.yml  hqs-build-deploy-sphinx-doc-pure-python.yml  hqs-ci-test-pure-python.yml  hqs-ci-test-rust-pyo3.yml
_modules/: index.html
_modules/qoqo_braket/: backend.html
_modules/qoqo_for_braket/: backend.html
_sources/: index.rst.txt
archive/: README.md
archive/qoqo_for_braket_devices/: Cargo.toml  build.rs  pyproject.toml
archive/qoqo_for_braket_devices/qoqo_for_braket_devices/: DEPENDENCIES  LICENSE_FOR_BINARY_DISTRIBUTION  __init__.py
archive/qoqo_for_braket_devices/src/: lib.rs
archive/qoqo_for_braket_devices/src/devices/: ionq_aria1.rs  ionq_harmony.rs  oqc_lucy.rs  rigetti_aspenm3.rs
archive/qoqo_for_braket_devices/tests/integration/: device.rs
archive/roqoqo_for_braket_devices/: Cargo.toml  README.md
archive/roqoqo_for_braket_devices/src/devices/: aws_oqc_lucy.rs
archive/roqoqo_for_braket_devices/tests/integration/: device.rs
docs/: Makefile  conf.py  modules.rst
documentation/: book.toml
documentation/book/: 404.html  print.html  toc.html  toc.js
documentation/src/: Introduction.md  SUMMARY.md
qoqo_braket/: __init__.py  backend.py  post_processing.py
qoqo_braket/interface/: __init__.py  ionq_verbatim_interface.py  oqc_verbatim_interface.py  rigetti_verbatim_interface.py
qoqo_for_braket/: __init__.py  backend.py  pyproject.toml
qoqo_for_braket/docs/: Makefile  conf.py
qoqo_for_braket/interface/: __init__.py  ionq_verbatim_interface.py  rigetti_verbatim_interface.py
qoqo_for_braket/qoqo_for_braket/: __init__.py  backend.py  post_processing.py  qoqo_hybrid_helper.py  qoqo_requirements.txt  queued_results.py
qoqo_for_braket/qoqo_for_braket/interface/: __init__.py  ionq_verbatim_interface.py  iqm_verbatim_interface.py  oqc_verbatim_interface.py  rigetti_verbatim_interface.py
qoqo_for_braket/src/: backend.py
qoqo_for_braket/tests/: running_with_aws_cloud_simulator.py  running_with_aws_cloud_simulator_async.py  running_with_aws_cloud_simulator_async_program.py  running_with_aws_cloud_simulator_hybrid.py  running_with_aws_cloud_simulator_hybrid_async.py  running_with_uat.py  test_input_bit.py  test_running_local_with_qasm_backend.py  test_running_with_ionq.py  test_running_with_iqm.py  test_running_with_oqc.py  test_running_with_rigetti.py  test_serialisation.py
qoqo_for_braket_api/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
qoqo_for_braket_api/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
qoqo_for_braket_api/html/_modules/: index.html
qoqo_for_braket_api/html/_modules/qoqo_for_braket/: backend.html  queued_results.html
qoqo_for_braket_api/html/_static/: documentation_options.js
qoqo_for_braket_devices/: Cargo.toml  README.md  pyproject.toml
qoqo_for_braket_devices/docs/: Makefile  conf.py  index.rst
qoqo_for_braket_devices/python_tests/: test_braket_info_retrieval.py  test_initialization.py
qoqo_for_braket_devices/qoqo_for_braket_devices/: DEPENDENCIES  __init__.py  device_property.py  mocked_properties.py
qoqo_for_braket_devices/src/: lib.rs
qoqo_for_braket_devices/src/devices/: ionq_aria1.rs  ionq_harmony.rs  mod.rs  oqc_lucy.rs  rigetti_aspenm3.rs
qoqo_for_braket_devices/tests/integration/: device.rs  main.rs
qoqo_for_braket_devices_api/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
qoqo_for_braket_devices_api/html/.doctrees/: environment.pickle  index.doctree
qoqo_for_braket_devices_api/html/_modules/: index.html
qoqo_for_braket_devices_api/html/_static/: documentation_options.js
roqoqo_for_braket_devices/: Cargo.toml  README.md
roqoqo_for_braket_devices/src/: devices.rs  lib.rs
roqoqo_for_braket_devices/src/devices/: aws_ionq_aria1.rs  aws_ionq_harmony.rs  aws_oqc_lucy.rs  aws_rigetti_aspen_m3.rs
roqoqo_for_braket_devices/tests/integration/: device.rs  main.rs
roqoqo_for_braket_devices_api/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
roqoqo_for_braket_devices_api/implementors/core/clone/: trait.Clone.js
roqoqo_for_braket_devices_api/implementors/core/cmp/: trait.PartialEq.js
roqoqo_for_braket_devices_api/implementors/core/convert/: trait.From.js
roqoqo_for_braket_devices_api/implementors/core/default/: trait.Default.js
roqoqo_for_braket_devices_api/implementors/core/fmt/: trait.Debug.js
roqoqo_for_braket_devices_api/implementors/core/marker/: trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
roqoqo_for_braket_devices_api/implementors/roqoqo/devices/: trait.QoqoDevice.js
roqoqo_for_braket_devices_api/implementors/serde/de/: trait.Deserialize.js
roqoqo_for_braket_devices_api/implementors/serde/ser/: trait.Serialize.js
roqoqo_for_braket_devices_api/roqoqo_for_braket_devices/: all.html  index.html  sidebar-items.js
roqoqo_for_braket_devices_api/roqoqo_for_braket_devices/devices/: enum.AWSDevice.html  index.html  sidebar-items.js  struct.IonQAria1Device.html  struct.IonQHarmonyDevice.html  struct.OQCLucyDevice.html  struct.RigettiAspenM3Device.html
roqoqo_for_braket_devices_api/search.desc/roqoqo_for_braket_devices/: roqoqo_for_braket_devices-desc-0-.js
roqoqo_for_braket_devices_api/src/roqoqo_for_braket_devices/: devices.rs.html  lib.rs.html
tests/: running_with_aws_cloud_simulator.py  test_running_local_with_qasm_backend.py  test_running_with_ionq.py  test_running_with_oqc.py  test_running_with_rigetti.py
(+28 files in other folders)
