[package]
name = "qoqo_for_braket_devices"
version = "0.9.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
rust-version = "1.76"
license = "Apache-2.0"
edition = "2021"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_for_braket"
description = "AWS's Braket devices interface for qoqo python quantum computing toolkit"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "qoqo_for_braket_devices"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qoqo = { version = "~1.21", default-features = false }
roqoqo = "~1.21"

ndarray = "0.16"
bincode = "2.0"
numpy = "0.25"

roqoqo_for_braket_devices = { path = "../roqoqo_for_braket_devices", version = "~0.9" }
qoqo-iqm = { version = "~0.11.2", default-features = false }

[dev-dependencies]
test-case = "3.0"

[dependencies.pyo3]
version = "0.25"
features = ["num-complex"]

[build-dependencies]
pyo3-build-config = "0.25"
pyo3 = "0.25"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
